--- a/blueprints/auth/templates/register.html
+++ b/blueprints/auth/templates/register.html
@@ -1,16 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>register</title>
-</head>
-<body>
-<form method="post">
-    {{ form.hidden_tag() }}
-    {{ form.login() }}
-    {{ form.password() }}
-    {{ form.confirm() }}
-    {{ form.submit() }}
-</form>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}">
+    <title>Bootstrap Example</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+  <body>
+  <div class="cen">
+
+    <div class="container">
+      <form method="post" action="">
+        <h1>Регистрация</h1>
+        <hr>
+
+          {{ form.hidden_tag() }}
+          {{ form.login.label() }}
+          {{ form.login() }}
+          {{ form.password.label() }}
+          {{ form.password() }}
+          {{ form.confirm.label() }}
+          {{ form.confirm() }}
+
+        <hr>
+            {{ form.submit(class = "registerbtn") }}
+      </form>
+    </div>
+
+  </div>
+  </body>
 </html>
