--- a/blueprints/auth/templates/login.html
+++ b/blueprints/auth/templates/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename='styles/style.css') }}">
     <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
@@ -22,11 +22,11 @@
               {{form.login.label()}}
               {{ form.login(class = "form_login") }}
               {{form.password.label()}}
-              {{ form.password(class = "form_login") }}
+              {{ form.password(class="form_login") }}
               {{form.remember_me.label()}}{{ form.remember_me(class = "form_login" ) }}
 
           <hr>
-              {{ form.submit( class="registerbtn") }}
+              {{ form.submit(class="registerbtn") }}
        </form>
       </div>
       <div class="to_reg">
