--- a/blueprints/auth/templates/register.html
+++ b/blueprints/auth/templates/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename='styles/style.css') }}">
     <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
@@ -26,7 +26,7 @@
           {{ form.confirm() }}
 
         <hr>
-            {{ form.submit(class = "registerbtn") }}
+            {{ form.submit(class="registerbtn") }}
       </form>
     </div>
 
