--- a/blueprints/auth/static/styles/style.css
+++ b/blueprints/auth/static/styles/style.css
@@ -1,6 +1,7 @@
 * {box-sizing: border-box}
 body {
   background: linear-gradient(to right, #30d5c8, #0000E6);
+  height: 100%;
 }
 /* Add padding to containers */
 .container {
@@ -9,24 +10,19 @@ body {
 
 /* Full-width input fields */
 .form_login {
-  width: 70%;
-  height: 50%;
-  padding: 5%;
-  margin: 1%
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
-}
-/* Full-width input fields */
-input[type=text], input[type=password] {
   width: 100%;
   height: 70%;
   padding: 5%;
-  margin: 1%
+  margin: 1%;
   display: inline-block;
   border: none;
   background: #f1f1f1;
 }
+.form_login:focus{
+  background-color: #ddd;
+  outline: none;
+}
+/* Full-width input fields */
 
 input[type=text]:focus, input[type=password]:focus {
   background-color: #ddd;
@@ -70,11 +66,17 @@ a {
     text-align : center;
 }
 .cen{
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    /* place-items: center; */
     opacity: 0.9;
-    margin: 25%;
-    border-radius: 5%;
+    width: 40%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    top: 20%;
+    border-radius: 4%;
     background: linear-gradient(to right, #7777FF, #30d5c8);
 }
 a {
