--- a/blueprints/auth/templates/login.html
+++ b/blueprints/auth/templates/login.html
@@ -12,27 +12,51 @@
   </head>
   <body>
 
-  <div class="cen">
+  <section class="vh-100 gradient-custom">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
 
-    <div class="container">
-      <form method="post">
-          <h1>Вход</h1>
-          <hr>
-              {{ form.hidden_tag() }}
-              {{form.login.label()}}
-              {{ form.login(class = "form_login") }}
-              {{form.password.label()}}
-              {{ form.password(class="form_login") }}
-              {{form.remember_me.label()}}{{ form.remember_me(class = "form_login" ) }}
+            <div class="mb-md-5 mt-md-4 pb-5">
+                <form method="post">
 
-          <hr>
-              {{ form.submit(class="registerbtn") }}
-       </form>
+                  <h2 class="fw-bold mb-2 text-uppercase">Вход</h2>
+                    {% for error in form.errors %}
+                        {%if form.password.errors %}
+                            <div class="alert alert-danger" role="alert">
+                                Неверный пароль или логин
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                  <p class="text-white-50 mb-5">Пожалуйста введите свой пароль</p>
+                        {{ form.hidden_tag() }}
+                  <div class="form-outline form-white mb-4">
+    <!--                <input type="email" id="typeEmailX" class="form-control form-control-lg" />-->
+    <!--                <label class="form-label" for="typeEmailX">Email</label>-->
+                      {{form.login.label(class = "form-label" ) }}
+                      {{ form.login(class = "form-control form-control-lg") }}
+                  </div>
+                  <div class="form-outline form-white mb-4">
+    <!--                <input type="password" id="typePasswordX" class="form-control form-control-lg" />-->
+    <!--                <label class="form-label" for="typePasswordX">Password</label>-->
+                      {{form.password.label(class = "form-label")}}
+                      {{ form.password(class = "form-control form-control-lg") }}
+                  </div>
+
+                    {{form.submit(class = "btn btn-outline-light btn-lg px-5")}}
+                </form>
+            </div>
+               <div>
+              <p class="mb-0">У Вас нет аккаунта? <a href="/auth/register" class="text-white-50 fw-bold">Зарегистрироваться</a>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="to_reg">
-          <p>Нет аккаунта?</p>
-          <a href="/register">Зарегистрируйтесь</a>
-      </div>
+    </div>
   </div>
+</section>
   </body>
 </html>
