--- a/blueprints/auth/templates/register.html
+++ b/blueprints/auth/templates/register.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -10,26 +11,51 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-  <div class="cen">
 
-    <div class="container">
-      <form method="post" action="">
-        <h1>Регистрация</h1>
-        <hr>
+  <section class="vh-100 gradient-custom">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
 
-          {{ form.hidden_tag() }}
-          {{ form.login.label() }}
-          {{ form.login() }}
-          {{ form.password.label() }}
-          {{ form.password() }}
-          {{ form.confirm.label() }}
-          {{ form.confirm() }}
+            <div class="mb-md-5 mt-md-4 pb-5">
+                 <form method="post">
+                   {{ form.hidden_tag() }}
+                  <h2 class="fw-bold mb-2 text-uppercase">Регистрация</h2>
+                  <p class="text-white-50 mb-5">Пожалуйста введите свой пароль</p>
 
-        <hr>
-            {{ form.submit(class="registerbtn") }}
-      </form>
+                  <div class="form-outline form-white mb-4">
+    <!--                <input type="email" id="typeEmailX" class="form-control form-control-lg" />-->
+    <!--                <label class="form-label" for="typeEmailX">Email</label>-->
+                      {{form.login.label(class = "form-label" ) }}
+                      {{ form.login(class = "form-control form-control-lg") }}
+                  </div>
+                  <div class="form-outline form-white mb-4">
+    <!--                <input type="password" id="typePasswordX" class="form-control form-control-lg" />-->
+    <!--                <label class="form-label" for="typePasswordX">Password</label>-->
+                      {{form.password.label(class = "form-label")}}
+                      {{ form.password(class = "form-control form-control-lg") }}
+                  </div>
+                   <div class="form-outline form-white mb-4">
+    <!--                <input type="password" id="typePasswordX" class="form-control form-control-lg" />-->
+    <!--                <label class="form-label" for="typePasswordX">Password</label>-->
+                      {{ form.confirm.label(class = "form-label")}}
+                      {{ form.confirm(class = "form-control form-control-lg") }}
+                  </div>
+
+                    {{form.submit(class = "btn btn-outline-light btn-lg px-5")}}
+                </form>
+            </div>
+              <div>
+              <p class="mb-0">У Вас есть аккаунт? <a href="/auth/login" class="text-white-50 fw-bold">Войти</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
   </div>
+</section>
   </body>
 </html>
