теперь можно добавлять корабли и призы на доску

--- a/blueprints/boards/templates/board_list.html
+++ b/blueprints/boards/templates/board_list.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 {% for board in boards %}
-<div>{{ board.id }}, {{ board.n }}</div>
+<div>board.id, {{ board.n }}</div>
 {% endfor %}
 </body>
 </html>
