reducted board model

--- a/blueprints/boards/templates/add_board.html
+++ b/blueprints/boards/templates/add_board.html
@@ -8,6 +8,7 @@
 <form method="post">
     {{ form.hidden_tag() }}
     {{ form.n() }}
+    {{ form.default_shoots() }}
     {{ form.submit() }}
 </form>
 </body>
