bug fix, added edit_board page

--- a/blueprints/main_page/templates/index.html
+++ b/blueprints/main_page/templates/index.html
@@ -7,5 +7,8 @@
 <body>
 <a href="{{ url_for('auth_page.login') }}">login</a>
 <a href="{{ url_for('auth_page.register') }}">register</a>
+{% if current_user.is_authenticated %}
+<a href="{{ url_for('profile.user') }}">{{ current_user.login }}</a>
+{% endif %}
 </body>
 </html>
