--- a/blueprints/profiles/templates/admin.html
+++ b/blueprints/profiles/templates/admin.html
@@ -10,6 +10,7 @@
   <body>
     <h1>Привет мир!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+    <a href="{{ url_for('board.add_board') }}">Создать доску</a>
+    <a href="{{ url_for('auth_page.logout') }}">Выйти</a>
   </body>
 </html>
