теперь можно добавлять корабли и призы на доску

--- a/blueprints/boards/templates/edit_board.html
+++ b/blueprints/boards/templates/edit_board.html
@@ -8,13 +8,13 @@
 {{ ship_form.errors }}
 <form method="post">
     {{ ship_form.hidden_tag() }}
-    {{ ship_form.x(max=board.n - 1)}}
-    {{ ship_form.y(max=board.n - 1)}}
+    {{ ship_form.x(max=(board.n - 1))}}
+    {{ ship_form.y(max=(board.n - 1))}}
     {{ ship_form.prize() }}
     {{ ship_form.submit()}}
 </form>
 {% for i in board_render %}
-    <form>{{ i }}</form>
+    <div>{{ i }}</div>
 {% endfor %}
 </body>
 </html>
