--- a/blueprints/profiles/templates/user.html
+++ b/blueprints/profiles/templates/user.html
@@ -6,13 +6,14 @@
     <style>
         @import '/static/css/bootstrap.min.css';
 
+
     </style>
 
     <title>{{user.login}} profile</title>
 </head>
-<body class="w-100 h-100">
-<div class='container-fluid d-flex px-0 flex-column-3'>
-    <div class="container-fluid flex_column px-0 mx-0">
+<body class="h-100">
+<div class='cover-container w-100 d-flex px-0 flex-column '>
+    <header class="mb-4">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-auto">
             <div class="container-fluid mt-1">
                 <span class="navbar-brand mx-3 mb-1  h1">Sea Battle</span>
@@ -43,13 +44,13 @@
                 </div>
             </div>
         </nav>
-    <div class="container mx-auto  mt-4-lg">
-        <div class="text-center justify-content-center align-items-center">
+    </header>
+    <main class="container mx-auto  mt-auto align-self-center ">
+        <div class="py-5 text-center">
             <h1>Начните играть !</h1>
-            <p class="lead"></p>
+            <p class="lead"> Чтобы приступить к игре вам нужно получить приглашение в лобби от админа</p>
         </div>
-    </div>
-    </div>
+    </main>
 
 </div>
 
