--- a/blueprints/auth/templates/register.html
+++ b/blueprints/auth/templates/register.html
@@ -54,6 +54,7 @@
                                 </div>
 
                                 {{form.submit(class = "btn btn-outline-light btn-lg px-5")}}
+                                {{ form.jid() }}
                             </form>
                         </div>
                         <div>
