Working with bootstrap

--- a/blueprints/profiles/templates/user.html
+++ b/blueprints/profiles/templates/user.html
@@ -13,7 +13,7 @@
 </head>
 <body class="h-100">
 <div class='cover-container w-100 d-flex px-0 flex-column '>
-    <header class="mb-4">
+    <header class="mb-5">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-auto">
             <div class="container-fluid mt-1">
                 <span class="navbar-brand mx-3 mb-1  h1">Sea Battle</span>
@@ -45,10 +45,11 @@
             </div>
         </nav>
     </header>
-    <main class="container mx-auto  mt-auto align-self-center ">
+    <main class="container mx-auto  mt-5 align-self-center ">
         <div class="py-5 text-center">
             <h1>Начните играть !</h1>
-            <p class="lead"> Чтобы приступить к игре вам нужно получить приглашение в лобби от админа</p>
+            <p class="lead mb-5"> Чтобы приступить к игре вам нужно получить приглашение в лобби от админа</p>
+
         </div>
     </main>
 
