rewriting structure of project

--- a/blueprints/templates/admin.html
+++ b/blueprints/templates/admin.html
@@ -1,9 +1,9 @@
-{% extends '../../templates/base_admin.html' %}
+{% extends 'base_admin.html' %}
 
-{% block main_content %}
+{%block main_content%}
 <div class="py-5 text-center">
     <h1>Начните играть !</h1>
     <p class="lead mb-5"> Чтобы приступить к игре вам нужно получить приглашение в лобби от админа</p>
     <a class="btn btn-outline-light btn-lg btn-lg mt-5 px-5" href="{{ url_for('board.add_board') }}">Создать игру</a>
 </div>
-{% endblock %}
+{%endblock%}
