--- a/blueprints/templates/base_admin.html
+++ b/blueprints/templates/base_admin.html
@@ -47,8 +47,8 @@
         </nav>
     </header>
     <main class="container mx-auto  mt-5 align-self-center ">
-        {%main_content%}
-        {%end_block%}
+        {%block main_content%}
+        {%endblock%}
     </main>
 
 </div>
