--- a/blueprints/templates/add_board.html
+++ b/blueprints/templates/add_board.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base_user.html' %}
+{%main_content%}
 <form method="post">
     {{ form.hidden_tag() }}
     {{ form.n() }}
     {{ form.default_shoots() }}
     {{ form.submit() }}
 </form>
+{%endblock%}
 </body>
 </html>
