--- a/blueprints/templates/base_user.html
+++ b/blueprints/templates/base_user.html
@@ -9,7 +9,7 @@
 
     </style>
 
-    <title>{{user.login}} profile</title>
+    <title>Profile</title>
 </head>
 <body class="h-100">
 <div class='cover-container w-100 d-flex px-0 flex-column '>
@@ -46,9 +46,8 @@
         </nav>
     </header>
     <main class="container mx-auto  mt-5 align-self-center ">
-
-        {%main_content%}
-        {%end_block%}
+        {%block main_content%}
+        {%endblock%}
     </main>
 
 </div>
