--- a/blueprints/templates/user.html
+++ b/blueprints/templates/user.html
@@ -1,12 +1,12 @@
-{% extends templates/base_user.html %}
+{% extends 'base_user.html' %}
 
-   {% block main_content %}
-        <div class="py-5 text-center">
-            <h1>Начните играть !</h1>
-            <p class="lead mb-5"> Чтобы приступить к игре вам нужно получить приглашение в лобби от админа</p>
+{%block main_content%}
+    <div class="py-5 text-center">
+        <h1>Начните играть !</h1>
+        <p class="lead mb-5"> Чтобы приступить к игре вам нужно получить приглашение в лобби от админа</p>
 
-        </div>
-    {% endblock %}
+    </div>
+{%endblock%}
 
 
 
