rewriting add_board.html

--- a/blueprints/templates/add_board.html
+++ b/blueprints/templates/add_board.html
@@ -1,13 +1,18 @@
 {% extends 'base_admin.html' %}
 {%block main_content%}
-<div class="p-3 mb-2 bg-info text-dark">
-    <div class="mb-2>">
+<div class="row d-flex justify-content-center align-items-center h-100">
+    <div class="col-8 col-md-6 col-lg-7 bg-dark ">
         <h1 class="text-center">Создайте игру</h1>
-        <form method="post" class="text-center">
-            <div class="row   align-content-center">
+        <form method="post" class="text-center mx-lg-5 mx-4">
+            <div class="form-outline form-white mb-4">
                 {{ form.hidden_tag() }}
-                {{ form.n() }}
-                {{ form.default_shoots() }}
+                <div class="form-outline form-white mb-4">
+                    {{ form.n(class = "form-control form-control-lg") }}
+                </div>
+                <div class="form-outline form-white mb-4">
+                    {{ form.default_shoots(class = "form-control form-control-lg") }}
+                </div>
+
                 {{ form.submit(class="btn btn-outline-light btn-lg btn-lg mt-5 px-5") }}
             </div>
         </form>
