rewriting prizes.html

--- a/blueprints/templates/add_board.html
+++ b/blueprints/templates/add_board.html
@@ -6,13 +6,13 @@
         <form method="post" class="text-center mx-lg-5 mx-4">
             <div class="mt-4">
                 <div class="form-outline form-white mb-4">
-                    <label class="text-white">Укажите сторону квадрата</label>
+                    <label class="text-white mt-4">Укажите сторону квадрата</label>
                     {{ form.hidden_tag() }}
                     <div class="form-outline form-white mb-4">
                         {{ form.n(class = "form-control form-control-lg") }}
                     </div>
                     <div class="form-outline form-white mb-4">
-                        <label class="text-white">Укажите количество выстрелов</label>
+                        <label class="text-white mt-4">Укажите количество выстрелов</label>
                         {{ form.default_shoots(class = "form-control form-control-lg") }}
                     </div>
 
