--- a/blueprints/templates/base_admin.html
+++ b/blueprints/templates/base_admin.html
@@ -29,8 +29,9 @@
                         <li class="nav-item active mr-1">
                             <a class="nav-link " href="">Профиль <span class="sr-only"></span></a>
                         </li>
+
                         <li class="nav-item active mr-1">
-                            <a class="nav-link " href="{{url_for('admin.add_prize')}}">Редактировать призы <span class="sr-only"></span></a>
+                            <a class="nav-link " href="{{url_for('profile.prize')}}">Призы <span class="sr-only"></span></a>
                         </li>
                         <li class="nav-item active mr-1">
                             <a class="nav-link " href="">Спсиок game rooms <span class="sr-only"></span></a>
