--- a/blueprints/templates/index.html
+++ b/blueprints/templates/index.html
@@ -3,12 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        @import '/static/css/bootstrap.min.css';
+
+
+    </style>
 </head>
-<body>
-<a href="{{ url_for('auth_page.login') }}">login</a>
-<a href="{{ url_for('auth_page.register') }}">register</a>
-{% if current_user.is_authenticated %}
-<a href="{{ url_for('profile.user') }}">{{ current_user.login }}</a>
-{% endif %}
-</body>
+<body class="d-flex h-100 text-center text-bg-dark">
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="mb-auto">
+        <div>
+            <h3 class="float-md-start mb-0">Cover</h3>
+            <nav class="nav nav-masthead justify-content-center float-md-end">
+                <div class="container-fluid">
+                    <a href="{{ url_for('auth_page.login') }}">login</a>
+                    <a href="{{ url_for('auth_page.register') }}">register</a>-->
+                    {% if current_user.is_authenticated %}
+                    <a href="{{ url_for('profile.user') }}">{{ current_user.login }}</a>
+                    {% endif %}
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <main class="px-3">
+        <h1>Cover your page.</h1>
+        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the
+            text, and add your own fullscreen background photo to make it your own.</p>
+        <p class="lead">
+            <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Learn more</a>
+        </p>
+    </main>
+
+    <footer class="mt-auto text-white-50">
+        <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a
+                href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+    </footer>
+</div>
+<!--<body>-->
+<!--<a href="{{ url_for('auth_page.login') }}">login</a>-->
+<!--<a href="{{ url_for('auth_page.register') }}">register</a>-->
+<!--{% if current_user.is_authenticated %}-->
+<!--<a href="{{ url_for('profile.user') }}">{{ current_user.login }}</a>-->
+<!--{% endif %}-->
+<!--</body>-->
 </html>
