--- a/blueprints/templates/base_admin.html
+++ b/blueprints/templates/base_admin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         @import '/static/css/bootstrap.min.css';
+        @import '/static/css/style.css';
     </style>
     <title>Привет мир!</title>
   </head>
